[tool.poetry]
name = "qusim"
version = "0.1.0"
description = ""
authors = ["czy-ustc <chenzhiyuan@mail.ustc.edu.cn>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "1.21.4"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
yapf = "^0.32.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
